# RMNpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_Analysis.md  API_Improvements_Summary.md  COMPREHENSIVE_ROUNDTRIP_TESTS.md  CSDMPY_API_COMPATIBILITY.md  ClaudeOpus4Advice.tex  DEPENDENCY_STRATEGY.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  ENVIRONMENT_SETUP.md  GOOGLE_COLAB_FIX.md  MANIFEST.in  MEMORY_LEAK_ANALYSIS.md  Makefile  MasterPlan.md  NOTICE.md  PROJECT_REORGANIZATION_PLAN.md  PROJECT_STATUS.md  PYTHON_TEST_FIXES.md  README.md  RELEASE_SETUP.md  REORGANIZATION_SUMMARY.md  RMNpy_Implementation_Plan.md  WHEEL_FIX_SUMMARY.md  WINDOWS_CI_DLL_ISSUE_SUMMARY.md  WINDOWS_LINKING_SOLUTION.md  WORKFLOW_PLAN.md  WindowsPlan.md  analyze_wheel_libraries.py  build.sh  build_deps.py  build_deps_new.py  build_test_wheel.py  clean.sh  clean_libs.py  deploy_docs.sh  dev-windows.dockerfile  environment-dev.yml  (+31 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 00-read-first.md  bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  ci.yml  docs.yml  release.yml  test-minimal.yml  test-release.yml
docs/: .gitignore  API_SIMPLIFICATION_REVIEW.md  CHANGELOG.md  CONSISTENCY_ANALYSIS.md  DEPENDENT_VARIABLE_FIX.md  DISTRIBUTION_STRATEGY.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATES_SUMMARY.md  Makefile  README.md  README_DOCS.md  SCIENTIFIC_EXAMPLES_IMPLEMENTATION.md  TESTING.md  background.rst  changelog.md  changelog.rst  conf.py  create_monotonic_improvement_summary.md  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst  requirements.txt  sitypes_demo.ipynb  sphinx_warning_fixes.ipynb
docs/_static/: custom.css
docs/api/: index.rst  rmnpy.rst  sitypes.rst
docs/api_reference/: core.md  core.rst  dataset.rst  datum.rst  dependent_variable.rst  dimension.rst  exceptions.md  exceptions.rst  index.md  index.rst  types.md  types.rst
docs/development/: ARCHITECTURE_REFACTOR_PLAN.md  CLEANUP_PLAN.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  NEW_COMPUTER_SETUP.md  QUANTITY_CONSTANTS_SUMMARY.md  README.md  TESTING_REPORT.md
docs/examples/: basic_usage.md  basic_usage.rst  index.md  index.rst
docs/examples_gallery/: README.txt  plot_01_basic_example.py  plot_01_installation_basic_usage.py  plot_02_nmr_spectroscopy.py  plot_02_visualization.py  plot_03_advanced_data_manipulation.py
docs/notebooks/: 01_installation_and_basic_usage.ipynb  02_nmr_spectroscopy.ipynb  03_advanced_data_manipulation.ipynb  README.md
docs/user_guide/: datasets.md  datasets.rst  index.md  index.rst
examples/: basic_usage.py  dimensionality_constants_example.py  dimensionality_constants_example_new.py  dimensionality_constants_example_old.py  t1_inversion_recovery.py
examples/rmnpy/: dependent_variable_tutorial.ipynb  dimension_tutorial.ipynb  sparse_sampling_tutorial.ipynb
examples/sitypes/: sitypes_tutorial.ipynb
include/OCTypes/: OCArray.h  OCAutoreleasePool.h  OCBoolean.h  OCData.h  OCDictionary.h  OCFileUtilities.h  OCIndexArray.h  OCIndexPairSet.h  OCIndexSet.h  OCLeakTracker.h  OCLibrary.h  OCMath.h  OCNumber.h  OCSet.h  OCString.h  OCType.h
include/RMNLib/: Dataset.h  Datum.h  DependentVariable.h  Dimension.h  GeographicCoordinate.h  RMNGridUtils.h  RMNLibrary.h  SparseSampling.h
logs_43782041683/: 0_Build wheels on macos-14.txt  1_Build wheels on windows-latest.txt  2_Build wheels on macos-13.txt  3_Build source distribution.txt  4_Build wheels on ubuntu-latest.txt
logs_43782041683/Build source distribution/: 1_Set up job.txt  2_Run actions_checkout@v5.txt  3_Build sdist.txt  4_Run actions_upload-artifact@v4.txt  8_Post Run actions_checkout@v5.txt  9_Complete job.txt
logs_43782041683/Build wheels on macos-13/: 10_Post Run actions_checkout@v5.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v5.txt  4_Build wheels.txt  9_Post Build wheels.txt
logs_43782041683/Build wheels on macos-14/: 10_Post Run actions_checkout@v5.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v5.txt  4_Build wheels.txt  9_Post Build wheels.txt
logs_43782041683/Build wheels on ubuntu-latest/: 10_Post Run actions_checkout@v5.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v5.txt  4_Build wheels.txt  9_Post Build wheels.txt
logs_43782041683/Build wheels on windows-latest/: 10_Post Run actions_checkout@v5.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v5.txt  3_Setup MSYS2 (Windows only).txt  4_Build wheels.txt  9_Post Build wheels.txt
scripts/: README.md  build_deps_new.py  build_deps_old.py  check_wheel_libraries.py  ci_stub_libs.sh  extract_si_constants.py  test_error_handling.py
src/rmnpy/: __init__.py  colab_fix.py  constants.pyx  core.pxd  core.pyx  core_simple.pxd  dataset.pxd  dataset.pyx  datum.pxd  datum.pyx  dependent_variable.pxd  dependent_variable.pyx  dimension.pxd  dimension.pyx  dll_loader.py  exceptions.py  helpers.pxd  helpers.pyx  math.py  sparse_sampling.pyx  types.py
tests/: __init__.py  test_basic.py  test_math.py  test_minimal.py  test_phase_1_4_integration.py  test_quick.py  test_runner.py  test_siscalar.py  test_unit.py
tests/development/: README.md  test_clean_constants.py  test_create_method.py  test_more_constants.py  test_unit_arithmetic.py  test_unit_arithmetic_final.py  test_unit_arithmetic_fixed.py
tests/experimental/: README.md  debug_test.py  debug_unit_symbols.py  quick_test.py  quick_test2.py
tests/integration/: README.md  test_complete_constants.py  test_complete_quantities.py  test_confirmed_working.py  test_final_comprehensive.py
tests/test_helpers/: test_minimal.pyx  test_octypes.py  test_octypes_roundtrip.pyx
tests/test_rmnlib/: test_dependent_variable.py  test_dependent_variable.py.disabled  test_dimension.py  test_geographic_coordinate.py
tests/test_sitypes/: test_dimensionality.py  test_scalar.py  test_sitypes_linking.pyx  test_unit.py  test_unit_enhancements.py  test_unit_memory_management.py
tests/unit/: README.md  test_c_constants.py  test_constants.py  test_unit.py
(+49 files in other folders)
